# jp

./: Cargo.toml  build.rs
src/: lib.rs  main.rs  payment_identifiers.proto  payment_ledger_posting.proto  payment_pacs_008_001_06.proto
src/des/: mod.rs
src/schemas/proto/: payment_envelope.proto  payment_envelope_body_part.proto  payment_envelope_header.proto  payment_form3_data.proto  payment_raw_message_data.proto
src/schemas/structs/: mod.rs  payment_envelope.rs  payment_envelope_body_part.rs  payment_envelope_header.rs  payment_form3_data.rs  payment_identifiers.rs  payment_ledger_posting.rs  payment_pacs_008_001_06.rs  payment_raw_message_data.rs
src/ser/: mod.rs
