[package]
name = "jp"
version = "0.1.0"
edition = "2021"
authors = [ "Andy Cushing <https://github.com/AndrewCushing>" ]
description = "Command line utility to serialise and deserialise payment envelopes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.1.8", features = ["derive"] }
prost = "^0.10.0"
bytes = "^1.1.0"

[build-dependencies]
prost-build = "0.5"