[package]
name = "jp"
version = "0.1.0"
edition = "2021"
authors = [ "Andy Cushing <https://github.com/AndrewCushing>" ]
description = "Command line utility to serialise and deserialise payment envelopes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.1.8", features = ["derive"] }
protobuf = "^2.27.1"

[build-dependencies]
protoc-rust = "^2.27.1"