[package]
name = "jp"
version = "0.1.0"
edition = "2021"
authors = [ "Andy Cushing <https://github.com/AndrewCushing>" ]
description = "Command line utility to serialise and deserialise payment envelopes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
clap = { version = "^3.1.8", features = ["derive"] }
protobuf = "^2.27.1"
rdkafka = "^0.28.0"
log = "^0.4.16"
tokio = { version = "^1.0", features = ["full"] }
futures-channel = "^0.3.0"
futures-executor = { version = "^0.3.0", optional = true }
futures-util = { version = "^0.3.0", default-features = false }
libc = "^0.2.0"
chrono = "^0.4.0"
env_logger = "^0.9.0"

[dev-dependencies]

[build-dependencies]
protoc-rust = "^2.27.1"